# wordmix

./: .gitignore  Makefile  README.txt  extract_the_audio.py  extract_the_words.py  make_the_result.py  pyproject.toml  rebuild_and_watch.sh  watch.sh
