[tool.poetry]
name = "wordmix"
version = "0.1.0"
description = "(Video -> words) + script -> mixed words"
authors = ["megahomyak <g.megahomyak@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
moviepy = "^1.0.3"
pvleopard = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
